home@2017-11-14 spring-hibernate-test

--- a/blog-core/src/main/resources/application.properties
+++ b/blog-core/src/main/resources/application.properties
@@ -22,9 +22,9 @@ logging.file=F:/workspace/myweb/blog/log/blog-core.log
 
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url=jdbc:mysql://localhost:3306/blog
-spring.datasource.url=jdbc:mysql://192.168.222.140:3306/blog
+spring.datasource.url=jdbc:mysql://101.200.238.35:12311/blog
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=mo@*811li
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Pool Configuration
