--- a/blog-core/pom.xml
+++ b/blog-core/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>studio.limo.web.blog</groupId>
     <artifactId>blog-core</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1-Releases</version>
     <packaging>jar</packaging>
 
     <name>blog-core</name>
@@ -30,24 +30,19 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
+        <!-- JDBC driver for MySQL -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
         </dependency>
+        <!-- JDBC driver for SQL Server -->
         <dependency>
-            <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf</artifactId>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-java8time</artifactId>
-        </dependency>
-        <!-- jackson -->
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk16</artifactId>
-            <version>1.46</version>
-        </dependency>
+
         <!-- Apache http client -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -59,20 +54,6 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-hibernate5</artifactId>
-        </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <!-- <configuration> <fork>true</fork> <profiles> <profile>local</profile>
-                    <profile>dummy</profile> </profiles> </configuration> -->
-            </plugin>
-        </plugins>
-    </build>
 </project>
