--- a/blog-admin/src/main/resources/application.properties
+++ b/blog-admin/src/main/resources/application.properties
@@ -10,8 +10,14 @@
 logging.level.com.hitrust.emv.threeds.acs=DEBUG
 logging.file=F:/workspace/myweb/blog/log/blog-admin.log
 
+#server
+server.port=8080
+server.error.path=/error
+
 #thymeleaf start
-spring.thymeleaf.mode=HTML5
+spring.mvc.view.prefix=classpath:/templates/
+spring.mvc.view.suffix=.html
+spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 #开发时关闭缓存,不然没法看到实时页面
